.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Location__c.object
<CustomObject>
    <description>Used to record office locations</description>
    <fields>
        <fullName>xcdhcm__Address1__c</fullName>
        <label>xAddress line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address2__c</fullName>
        <label>xAddress line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address3__c</fullName>
        <label>xAddress line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Companies_Name__c</fullName>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Contact_Names__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No employee record of this name exists and is active in the company</errorMessage>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.xcdhcm__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Locations (Contact name)</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__E_Mail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Fire_marshall__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fire marshall</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No Employee record of this name has an active status</errorMessage>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.xcdhcm__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Locations (Fire marshall)</relationshipLabel>
        <relationshipName>Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_Aid_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First aid contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No employee record of this name exists and is active in the Company</errorMessage>
            <filterItems>
                <field>xcdhcm__Employee_Detail__c.xcdhcm__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Locations (First aid contact)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Head_Quater_Branches__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered Office</fullName>
                </value>
                <value>
                    <fullName>Head Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Map__c</fullName>
        <formula>IF(
   AND(ISBLANK(xcdhcm__Postcode__c), ISBLANK(xcdhcm__City__c)),
   &quot;Please add a Postcode and City&quot;,

HYPERLINK(&quot;https://www.google.com/maps/place/&quot;+xcdhcm__Postcode__c + &quot;+&quot; + xcdhcm__City__c, 

IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; 
+ 
xcdhcm__Postcode__c 
+ 
&quot;+&quot; 
+ 
xcdhcm__City__c 
+ 
&quot;&amp;zoom=12&amp;scale=1&amp;size=300x100&amp;key=&quot;+$CustomMetadata.xcdhcm__External_integration_key__mdt.xcdhcm__Google_API_Key_Map.xcdhcm__Key_value__c +&quot;&amp;maptype=roadmap&amp;format=png&amp;visual_refresh=true&amp;markers=size:mid%7Ccolor:0xff0000%7Clabel:%7C&quot; 
+ 
xcdhcm__Postcode__c 
+ 
&quot;+&quot; 
+ 
xcdhcm__City__c 
, 
&quot;No map available&quot;, 150, 500) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_longer_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer in use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__State_Province__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <label>Locations</label>
    <listViews>
        <fullName>xcdhcm__All_Locations</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Head_Quater_Branches__c</columns>
        <columns>xcdhcm__City__c</columns>
        <columns>xcdhcm__Country__c</columns>
        <columns>xcdhcm__Map__c</columns>
        <columns>xcdhcm__Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>